--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">AngatkinMIREA</string>
+    <string name="compose_description">
+        Jetpack Compose — это современный набор инструментов для создания пользовательского
+        интерфейса (UI) на Android, разработанный Google.
+    </string>
 </resources>
