--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,25 @@
         Jetpack Compose — это современный набор инструментов для создания пользовательского
         интерфейса (UI) на Android, разработанный Google.
     </string>
+    <string name="lukashin">
+        Имя: Евгений\n
+        Отчество: Андреевич\n
+        Фамилия: Лукашин\n
+        Мобильный телефон: +7 495 495 95 95\n
+        Адрес: г. Москва, 3-я улица Строителей, д. 25, кв. 12
+    </string>
+    <string name="kuzyakin">
+        Имя: Василий\n
+        Отчество: Егорович\n
+        Фамилия: Кузякин\n
+        Мобильный телефон: —\n
+        Адрес: Ивановская область, дер. Крутово, д. 4
+    </string>
+    <string name="kalugina">
+        Имя: Людмила\n
+        Отчество: Прокофьевна\n
+        Фамилия: Калугина\n
+        Мобильный телефон: +7 495 788 78 78\n
+        Адрес: Москва, Большая Никитская, д. 43, кв. 290
+    </string>
 </resources>
